--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.2",
     "socket.io": "^1.7.3"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
   }
 }
